// Copyright (c) Microsoft Corporation.
// Licensed under the Apache v2.0 license.

syntax = "proto3";
option go_package = "github.com/microsoft/moc/rpc/nodeagent/security";
package moc.nodeagent.security;
import "google/protobuf/wrappers.proto";
import "common.proto";

enum CertificateType {
	Client = 0;
	Server = 1;
}

message CertificateRequest {
	repeated Certificate Certificates = 1;
}

message CertificateResponse {
	repeated Certificate Certificates = 1;
	google.protobuf.BoolValue Result = 2;
    string  Error = 3;
}

message Certificate {
    string name = 1;
    string id = 2;
    int64 notBefore = 3; 
    int64 notAfter = 4;
    bytes certificate = 5;
    Status status = 6;
    CertificateType type = 7;
    Entity entity = 8;
    Tags tags = 9;
}

service CertificateAgent {
    rpc CreateOrUpdate(CertificateRequest) returns (CertificateResponse) {}
    rpc Get(CertificateRequest) returns (CertificateResponse) {}
    rpc Delete(CertificateRequest) returns (CertificateResponse) {}
}
